# dynamic-html

./: Cargo.toml  LICENSE  deno.json  mod.ts
deno/: test.ts
lib/: dynamic_html.generated.js  dynamic_html_bg.wasm
src/: generate.rs  lib.rs  main.rs  parser.rs
