[package]
name = "dynamic-html"
version = "0.1.0"
edition = "2021"
#
# [lib]
# crate-type = ["cdylib"]

[features]
default = ["wasm"]
wasm = ["dep:wasm-bindgen", "dep:serde", "dep:serde_json"]

[dependencies]
regex = "1.7.1"
pathdiff = "0.2.1"

# wasm
wasm-bindgen = { version = "=0.2.81", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0.94", optional = true }
