[package]
name = "dynamic-html"
description = "Transpiler from dynamic-html to typescript"
version = "1.0.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/Densky-Framework/dynamic-html"
documentation = "https://html.densky.apika.me"
repository = "https://github.com/Densky-Framework/dynamic-html"
#
# [lib]
# crate-type = ["cdylib"]

[features]
default = ["wasm"]
wasm = ["dep:wasm-bindgen", "dep:serde", "dep:serde_json"]

[dependencies]
regex = "1.7.1"
pathdiff = "0.2.1"

# wasm
wasm-bindgen = { version = "=0.2.81", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0.94", optional = true }
